--- a/WebLegemClient/src/common/components/wl-lista-entidades/wl-lista-entidades.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-entidades/wl-lista-entidades.tmpl.html
@@ -11,7 +11,7 @@
                     ng-click="vm.seleccionarObjeto(entidad)"
                     ng-checked="vm.checkear(entidad)">
                 {{entidad.nombre}}<br />
-                <span>{{entidad.tipoEntidad.nombre}}</span>
+                <p>{{entidad.tipoEntidad.nombre}}</p>
             </label>
         </li>
     </ul>
