--- a/WebLegemClient/src/css/directivas/filtro_busqueda.css
+++ b/WebLegemClient/src/css/directivas/filtro_busqueda.css
@@ -1,60 +1,4 @@
-﻿/*------Select input Busqueda---------*/
-
-.select_busqueda{
-    display:flex; 
-    border-right:none;
-    position:relative;
-}
-
-.select_busqueda select:disabled{
-    background:#e3e3e3;
-}
-.select_busqueda input:disabled{
-    background:#e3e3e3;
-}
-
-
-.select_busqueda select, .select_busqueda input{
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    background:#fff;
-    width:100%;
-    height:35px;
-    overflow:hidden;
-    border:1px solid #999;
-    padding:0 10px;
-}
-
-    .select_busqueda:before{
-        font-family: 'iconos-legem';  
-        font-size:25px;
-        font-weight:900;
-        color:#999;
-        content:'\71';
-        position:absolute;
-        top:4px;
-        right:0;
-        width:30px;
-        height:35px;
-        pointer-events:none;
-    }
-
-    .select_busqueda:hover::before{
-        color:#099472;
-    }
-    .select_busqueda.disable:hover::before{
-        color:#999;
-    }
-    
-        /*------ Fin select Busqueda ------*/
-
-
-/*---------Fin Inputs y selects---------*/
-
-
-
-
-/*---------Lista de Filtros---------*/
+﻿/*---------Lista de Filtros---------*/
 
 .filtros_busqueda{
     width:100%;
