--- a/WebLegemClient/src/common/components/wl-lista-usuarios/wl-lista-usuarios.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-usuarios/wl-lista-usuarios.tmpl.html
@@ -4,7 +4,7 @@
             maxlength="20" 
             placeholder="Filtro"
             ng-model="vm.filtro" />
-    <button class="btn_cancel" title="Quitar filtro" disabled>
+    <button class="btn_cancel" title="Quitar filtro" ng-click="vm.filtro=''" ng-show="vm.filtro.length > 2">
         <span class="ico-plus"></span>
     </button>
 </div>
@@ -13,7 +13,7 @@
 <ul class="a_listado" style="width:100%;">
     <li ng-repeat="usuario in vm.lista | filter:vm.filtro" >
         <input type="radio" class="styled" id="a" name="a" />
-        <label class="styled" for="a" ng-click="vm.seleccionar(usuario);" >
+        <label class="styled" for="a" ng-disabled="vm.editando" ng-click="vm.seleccionar(usuario);" >
             {{ usuario.nombre }} {{ usuario.apellido }}<br />
             <p>Rol: {{ usuario.rol.nombre }}</p>
         </label>
